--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,8 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="master.css"/> 
+    <meta name="viewport" content="width=device-width , initial-scale=1.0">
     <title>React App</title>
   </head>
   <body>
