--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,7 +38,7 @@
 </script>
 <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     
-    
+<img src="./images/global-icon.png" class="goog-te-gadget-icon" alt="" />
     <div id="root"></div>
   </body>
 </html>
