--- a/client/public/index.html
+++ b/client/public/index.html
@@ -115,8 +115,9 @@
         }
       </script>
     </div>
+<script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     
+
     <div id="root"></div>
   </body>
-  
 </html>
