--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,24 +19,56 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="master.css"/> 
-    <meta name="viewport" content="width=device-width , initial-scale=1.0">
+    <link rel="stylesheet" href="master.css" />
+    <meta name="viewport" content="width=device-width , initial-scale=1.0" />
     <title>React App</title>
-    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="google_translate_element"></div>
 
-<script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL}, 'google_translate_element');
-}
-</script>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement(
+          {
+            pageLanguage: 'en',
+            layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL,
+          },
+          'google_translate_element'
+        );
+      }
+    </script>
 
-<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script>
 
     <div id="root"></div>
+
+    <div id="wrapper">
+      <div class="uiunit">
+        <select id="languageMenu"></select>
+      </div>
+      <div class="uiunit">
+        <label for="speakerMenu">Voice: </label>
+        <select id="speakerMenu"></select>
+      </div>
+      <div class="uiunit">
+        <label for="rateFld">Speed: </label>
+        <input
+          type="number"
+          id="rateFld"
+          min="0.5"
+          max="2"
+          step="0.1"
+          value="0.8"
+        />
+
+        <button type="button" id="speakBtn">Speak</button>
+        <br />
+      </div>
+      <div id="temp"></div>
+    </div>
   </body>
 </html>
