--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <title>Egyptian Monuments</title>
@@ -48,7 +49,9 @@
 
     <div id="wrapper">
       <div class="uiunit">
-        <select id="languageMenu"></select>
+        <select id="languageMenu" > 
+          <option selected> en-English</option>
+        </select>
       </div>
       <div class="uiunit">
         <label for="speakerMenu">Voice: </label>
