--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <title>Egyptian Monuments</title>
@@ -47,31 +46,6 @@
 
     <div id="root"></div>
 
-    <div id="wrapper">
-      <div class="uiunit">
-        <select id="languageMenu" > 
-          <option selected> en-English</option>
-        </select>
-      </div>
-      <div class="uiunit">
-        <label for="speakerMenu">Voice: </label>
-        <select id="speakerMenu"></select>
-      </div>
-      <div class="uiunit">
-        <label for="rateFld">Speed: </label>
-        <input
-          type="number"
-          id="rateFld"
-          min="0.5"
-          max="2"
-          step="0.1"
-          value="0.8"
-        />
-
-        <button type="button" id="speakBtn">Speak</button>
-        <br />
-      </div>
-      <div id="temp"></div>
-    </div>
+    <div id="wrapper"></div>
   </body>
 </html>
