--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,22 @@
 <html lang="en">
   <head>
     <title>Egyptian Monuments</title>
+    <style>
+      .box {
+        width: 600px;
+        height: 600px;
+        background-image: url('./images/panorama.jpg');
+        background-size: auto 100%;
+        animation: panorama 10s linear infinite alternate;
+        margin-left: 25%;
+      }
+      @keyframes panorama{
+        to{
+          background-position:100% 0 ;
+        }
+
+      }
+    </style>
     <meta
       name="google-translate-customization"
       content="9f841e7780177523-3214ceb76f765f38-gc38c6fe6f9d06436-c"
