--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,21 +2,19 @@
 <html lang="en">
   <head>
     <title>Egyptian Monuments</title>
-    <style>
-      .box {
-        width: 600px;
-        height: 600px;
-        background-image: url('./images/panorama.jpg');
-        background-size: auto 100%;
-        animation: panorama 10s linear infinite alternate;
-        margin-left: 25%;
-      }
-      @keyframes panorama {
-        to {
-          background-position: 100% 0;
-        }
-      }
-    </style>
+
+    <meta
+      name="viewport"
+      content="initial-scale=1.0 , maximum-scale=1.0 , user-scalable=1"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"
+    />
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"
+    ></script>
     <meta
       name="google-translate-customization"
       content="9f841e7780177523-3214ceb76f765f38-gc38c6fe6f9d06436-c"
@@ -39,6 +37,10 @@
     <title>React App</title>
   </head>
   <body>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"
+    ></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="google_translate_element"></div>
 
