--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,6 +27,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"
     />
+    
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"
@@ -54,7 +55,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"
